[gd_scene load_steps=10 format=3 uid="uid://bqh0gq7v7n7ov"]

[ext_resource type="Script" path="res://Scripts/FPS_Player.gd" id="1_l3746"]
[ext_resource type="Script" path="res://Scripts/PickUpAbility.gd" id="2_ftilx"]
[ext_resource type="Material" uid="uid://1qn1j3uuqsrc" path="res://Materials/Mat_Player.tres" id="3_1taom"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0vot7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tjs5v"]

[sub_resource type="PrismMesh" id="PrismMesh_umadh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gvxqo"]
size = Vector3(0.7, 1, 0.6)

[sub_resource type="ViewportTexture" id="ViewportTexture_ar734"]
viewport_path = NodePath("Sprite3D/SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_uwd7n"]
font_size = 24

[node name="TPS_Player" type="CharacterBody3D"]
collision_mask = 30
script = ExtResource("1_l3746")
camRef = NodePath("../CameraSystem")
speed = 500.0
jumpForce = 2000.0
interText = "Interact"

[node name="PlayerAbilities" type="Node" parent="."]
script = ExtResource("2_ftilx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45058e-08, 0, 0)
shape = SubResource("CapsuleShape3D_0vot7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45058e-08, 0, 0)
mesh = SubResource("CapsuleMesh_tjs5v")
surface_material_override/0 = ExtResource("3_1taom")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, -1.31134e-08, 0.3, 0, -0.3, -1.31134e-08, 7.45058e-08, 1.2, 0)
mesh = SubResource("PrismMesh_umadh")
surface_material_override/0 = ExtResource("3_1taom")

[node name="Marker3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 0)

[node name="Sight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45058e-08, 0, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)
shape = SubResource("BoxShape3D_gvxqo")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
billboard = 1
texture = SubResource("ViewportTexture_ar734")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
size = Vector2i(128, 128)

[node name="Label" type="Label" parent="Sprite3D/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_uwd7n")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="body_entered" from="Sight" to="PlayerAbilities" method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="PlayerAbilities" method="_on_sight_body_exited"]
